--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -6,3 +6,11 @@
   padding: 16px;
   text-align: center;
 };
+
+/* impleneting media query through css */
+/* error: not working */
+/* @media (min-width: 500px) {
+  .Person {
+    width: 20%;
+  }
+} */
