--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,27 @@
 .bold {
   font-weight: bolder;
 }
+
+.App button {
+  border: 1px solid blue;
+  padding: 16px;
+  background-color: green;
+  font: inherit;
+  color: white;
+  cursor: pointer;
+}
+
+.App button:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+/* 'button.Red': any button which has 'RED' class */
+.App button.Red {
+  background-color: red;
+}
+
+.App button.Red:hover {
+  background-color: salmon;
+  color: black;
+}
