--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -4,15 +4,21 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #703b09;
+  background-color: #703B09;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 20px;
   box-sizing: border-box;
-  /* zindex should be less than 'backdrop' */
   z-index: 90;
+  color: white;
 }
 
 .Toolbar nav {
   height: 100%;
 }
+
+.Logo {
+  height: 80%;
+}
+
