--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -7,7 +7,7 @@
   top: 0;
   /* zindex more than backdrop */
   z-index: 200;
-  background-color: red;
+  background-color: white;
   padding: 32px 16 px;
   box-sizing: border-box;
   transition: transform .03s ease-out;
@@ -16,7 +16,6 @@
 @media(min-width:500px) {
   .SideDrawer {
     display: none;
-    background-color: green;
   }
 }
 
@@ -29,6 +28,10 @@
   /* this will shift to left  */
   transform: translateX(-100%);
 
+}
+
+.Logo {
+  height: 11%;
 }
 
 /* as Open and Close class will keep opening and closing the SlideDrawer, "transition: transform .03s ease-out;" will play its part  */
