--- a/src/components/Navigation/NavigationItems/NavigationItems.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.css
@@ -5,4 +5,12 @@
   list-style: none;
   align-items: center;
   height: 100%;
+  /*  */
+  flex-flow: column;
+}
+
+@media(min-width: 500px) {
+  .NavigationItems {
+    flex-flow: row;
+  }
 }
