--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -5,10 +5,9 @@
   height: 100%;
   left: 0;
   top: 0;
-  /* zindex more than backdrop */
   z-index: 200;
   background-color: white;
-  padding: 32px 16 px;
+  padding: 32px 16px;
   box-sizing: border-box;
   transition: transform .03s ease-out;
 }
@@ -20,18 +19,17 @@
 }
 
 .Open {
-  /* it will put those properties which are defined above */
   transform: translateX(0);
 }
 
 .Close {
-  /* this will shift to left  */
   transform: translateX(-100%);
 
 }
 
 .Logo {
   height: 11%;
+  /*  */
+  margin-bottom: 32px;
 }
 
-/* as Open and Close class will keep opening and closing the SlideDrawer, "transition: transform .03s ease-out;" will play its part  */
