--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -1,5 +1,7 @@
 .Post {
-    width: 100px;
+    /*  */
+    width: 250px;
+
     padding: 16px;
     text-align: center;
     border: 1px solid #eee;
