--- a/src/containers/Blog/Blog.css
+++ b/src/containers/Blog/Blog.css
@@ -1,10 +1,10 @@
-.Posts {
+/* .Posts {
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
     width: 80%;
     margin: auto;
-}
+} */
 
 .Blog ul {
     list-style: none;
